--- a/ride_service/Dockerfile
+++ b/ride_service/Dockerfile
@@ -1,8 +1,8 @@
 FROM azul/zulu-openjdk-alpine:11
 ARG JAVA_OPTS
 ENV JAVA_OPTS=$JAVA_OPTS
-COPY target/wallet_service-0.0.1-SNAPSHOT.jar app.jar
-EXPOSE 8082
+COPY target/RideService-0.0.1-SNAPSHOT.jar app.jar
+EXPOSE 8081
 ENTRYPOINT exec java $JAVA_OPTS -jar app.jar
 # For Spring-Boot project, use the entrypoint below to reduce Tomcat startup time.
 #ENTRYPOINT exec java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar assg1.jar
