--- a/ride_service/src/main/resources/application.properties
+++ b/ride_service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8081
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:~/RideService;DB_CLOSE_ON_EXIT=FALSE;LOCK_MODE=2;AUTO_RECONNECT=TRUE
 spring.h2.console.enabled=true
 spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:mem:RideService
+spring.jpa.hibernate.ddl-auto=update
