Database service and implementation done

--- a/H2 database/Dockerfile
+++ b/H2 database/Dockerfile
@@ -1,3 +1,4 @@
 FROM openjdk:11-jdk-slim
-COPY h2-1.4.200.jar app.jar
-CMD java -cp app.jar org.h2.tools.server -webAllowOthers -tcpAllowOthers -ifNoExists
+COPY h2-1.4.200.jar app.jar 
+EXPOSE 3000 3001
+CMD java -cp app.jar org.h2.tools.Server -webPort 3000  -tcpPort 3001 -webAllowOthers -tcpAllowOthers -ifNotExists
