--- a/ride_service/Dockerfile
+++ b/ride_service/Dockerfile
@@ -2,6 +2,7 @@ FROM azul/zulu-openjdk-alpine:11
 ARG JAVA_OPTS
 ENV JAVA_OPTS=$JAVA_OPTS
 COPY target/RideService-0.0.1-SNAPSHOT.jar app.jar
+COPY IDs.txt IDs.txt
 EXPOSE 8081
 ENTRYPOINT exec java $JAVA_OPTS -jar app.jar
 # For Spring-Boot project, use the entrypoint below to reduce Tomcat startup time.
