--- a/ride_service/src/main/resources/application.properties
+++ b/ride_service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:tcp://localhost:3001/~/Ride-service;DB_CLOSE_ON_EXIT=FALSE;LOCK_MODE=2;AUTO_RECONNECT=TRUE
+spring.datasource.url=jdbc:h2:tcp://h2db:3001/~/Ride-service;DB_CLOSE_ON_EXIT=FALSE;LOCK_MODE=2;AUTO_RECONNECT=TRUE
 spring.h2.console.enabled=true
 spring.datasource.platform=h2
 spring.jpa.hibernate.ddl-auto=update
